<resources>

	<string name="app_name">EventApp</string>
	<string name="logo">The German Marshall Fund\'s BRUSSELS FORUM</string>
	<color name="ListItem_Gray">#505050</color>

	<string name="search_hint">Search</string>
	<string name="enter_comments">Enter comments:</string>
	<string name="save_comments">Save comments</string>
	<string name="take_picture">Take picture:</string>
			
	<string name="action_search">Search</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_profile">Profile</string>
	<string name="action_help">Help</string>
	<string name="action_settings">Settings</string>
	<string name="action_check_updates">Check Updates</string>

    <string name="header_agenda">Agenda</string>
    <string name="header_presenters">Presenters</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string-array name="drawer_item_list">
        <item>Agenda</item>
        <item>Presenters</item>
    </string-array>

</resources>